<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/vehicle_selector_title" />

    <TextView
        android:id="@+id/tv_empty_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/vehicle_selector_no_vehicles"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/color_green" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/epoxy_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_light_gray"
            android:padding="@dimen/default_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="@integer/grid_layout_span_count"
            tools:itemCount="10"
            tools:listitem="@layout/item_car_view" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/color_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        style="@style/LightButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/vehicle_selector_add_new_one"
        app:icon="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>
